flink/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /metrics
    prometheus.io/port:   '80'
spec:
  rules:
    - host: flink.local
      http:
        paths: 
          - backend: 
              serviceName: flink-jobmanager
              servicePort: 8081
            path: /
    - host: prometheus.local
      http:
        paths: 
          - backend: 
              serviceName: prometheus-ip-service
              servicePort: 9090
            path: /
